# yapy-cookiecutter

./: CONTRIBUTING.rst  README.rst  cookiecutter.json
.github/workflows/: test.yml
ci/: requirements.txt
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.repo_name}}/: .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  tox.ini
{{cookiecutter.repo_name}}/ci/: requirements.txt  update.py
{{cookiecutter.repo_name}}/ci/templates/.github/workflows/: build.yml  ci-cd.yml  coverage.yml  docs.yml  tests.yml
{{cookiecutter.repo_name}}/docs/: changelog.rst  conf.py  index.rst  installation.rst  requirements.txt
{{cookiecutter.repo_name}}/docs/reference/: index.rst
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.repo_name}}/templates/: CHANGELOG.md.j2
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.package_name}}.py
